--- a/app/config
+++ b/app/config
@@ -1,6 +1,6 @@
 <Resource name="jdbc/TestDB" auth="Container" type="javax.sql.DataSource"
           maxTotal="100" maxIdle="30" maxWaitMillis="10000"
-          username="root" password="PASSWORD"
+          username="root" password="darsh@4321"
           driverClassName="com.mysql.jdbc.Driver"
-          url="jdbc:mysql://backend-service:3306/studentapp"/>
+          url="jdbc:mysql://studentdb-svc:3306/studentapp"/>
 
