--- a/app/config
+++ b/app/config
@@ -1,6 +1,5 @@
 <Resource name="jdbc/TestDB" auth="Container" type="javax.sql.DataSource"
     maxTotal="100" maxIdle="30" maxWaitMillis="10000"
-    username="root" password="darsh@4321"
-    driverClassName="com.mysql.jdbc.Driver"
+    username="${DB_USERNAME}" password="${DB_PASSWORD}"
+    driverClassName="com.mysql.cj.jdbc.Driver"
     url="jdbc:mysql://studentdb-svc:3306/studentapp"/>
-
