--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
-kind: Deployment  
+kind: Deployment
 metadata:
   name: student-app
-spec: 
+spec:
   replicas: 2
   selector:
     matchLabels:
       app: student-app
-  strategy: 
-    type: RollingUpdate 
-  template: 
-    metadata: 
+  strategy:
+    type: RollingUpdate
+  template:
+    metadata:
       labels:
         app: student-app
     spec:
@@ -20,4 +20,34 @@ spec:
         ports:
         - name: tomcat
           containerPort: 8080
-          protocol: TCP 
+          protocol: TCP
+        env:
+        - name: DB_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: db-secret
+              key: username
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: db-secret
+              key: password
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "500m"
+          limits:
+            memory: "1024Mi"
+            cpu: "1000m"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 30
