--- a/app/config
+++ b/app/config
@@ -1,5 +1,16 @@
-<Resource name="jdbc/TestDB" auth="Container" type="javax.sql.DataSource"
-    maxTotal="100" maxIdle="30" maxWaitMillis="10000"
-    username="${DB_USERNAME}" password="${DB_PASSWORD}"
-    driverClassName="com.mysql.cj.jdbc.Driver"
-    url="jdbc:mysql://studentdb-svc:3306/studentapp"/>
+<?xml version="1.0" encoding="UTF-8"?>
+<Context>
+    <Environment name="DB_USERNAME" value="${env.DB_USERNAME}" type="java.lang.String" override="false"/>
+    <Environment name="DB_PASSWORD" value="${env.DB_PASSWORD}" type="java.lang.String" override="false"/>
+
+    <Resource name="jdbc/TestDB" auth="Container" type="javax.sql.DataSource"
+        maxTotal="100" maxIdle="30" maxWaitMillis="10000"
+        username="${env.DB_USERNAME}" password="${env.DB_PASSWORD}"
+        driverClassName="com.mysql.cj.jdbc.Driver"
+        url="jdbc:mysql://studentdb-svc:3306/studentapp"/>
+
+    <WatchedResource>WEB-INF/web.xml</WatchedResource>
+    <WatchedResource>WEB-INF/tomcat-web.xml</WatchedResource>
+    <WatchedResource>${catalina.base}/conf/web.xml</WatchedResource>
+</Context>
+
