mysql.cnf added

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,5 +1,6 @@
 FROM mysql
-
+# Copy the custom MySQL configuration file
+COPY mysql.cnf /etc/mysql/conf.d/mysql.cnf
 # Copy initialization script to initialize database schema or seed data
 COPY student.sql /docker-entrypoint-initdb.d/
 
