--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,7 +1,7 @@
-FROM mysql
+FROM mysql:latest
+
 # Copy the custom MySQL configuration file
-COPY mysql.cnf /etc/mysql/conf.d/mysql.cnf
-# Copy initialization script to initialize database schema or seed data
-COPY student.sql /docker-entrypoint-initdb.d/
+COPY mysql.cnf /etc/mysql/conf.d/
 
-
+# Ensure the configuration is loaded correctly
+CMD ["mysqld"]
